# StatQuill

./: Cargo.toml  LICENSE  StatQuill_PRD.md  statquill.py
src/: ai.rs  commentary.rs  config.rs  display.rs  main.rs  parser.rs  prediction.rs
src/math/: autoregressive.rs  classification.rs  conformal.rs  covariance.rs  encoding.rs  imputation.rs  linear_regression.rs  mod.rs  model_selection.rs  plausibility.rs  robust.rs  seasonal.rs  stationarity.rs
src/tui/: input.rs  mod.rs
