[package]
name = "statquill"
version = "1.0.0"
edition = "2021"
description = "StatQuill - Predictive Analytics CLI"
authors = ["StatQuill Team"]
license = "MIT"

[[bin]]
name = "statquill"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# CSV parsing
csv = "1.3"

# Excel (XLSX) parsing
calamine = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for OpenRouter API
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Terminal UI
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
ratatui = { version = "0.29", features = ["all-widgets"] }
ratatui-markdown = "0.2"

# Math / linear algebra
nalgebra = "0.33"

# Statistics (t-distribution, etc.)
statrs = "0.17"

# Date/time handling
chrono = "0.4"

# Configuration persistence
dirs = "5.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Random number generation
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
